--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -53,26 +53,25 @@
 				<section aria-labelledby="positionality-1">
 					<h2 id="positionality-1">Positionality #1</h2>
 					<div><a href="lootens.html"><img loading="lazy" src="img/zoomcasts/lootens-930px.jpg" srcset="img/zoomcasts/lootens-1275px.jpg 1275w, img/zoomcasts/lootens-930px.jpg 930w, img/zoomcasts/lootens-816px.jpg 816w, img/zoomcasts/lootens-663px.jpg 663w, img/zoomcasts/lootens-532px.jpg 532w, img/zoomcasts/lootens-465px.jpg 465w, img/zoomcasts/lootens-408px.jpg 408w, img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
-					<p>In this episode, Pearl Chaozon Bauer interviews Tricia Lootens to discuss the latter's academic journey, how students inform changing pedagogies, and the precarity of higher ed.
-					</p>
+					<p>Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed.</p>
 				</section>
 
 				<section aria-labelledby="positionality-2">
 					<h2 id="positionality-2">Positionality #2</h2>
 					<div><a href="aslami.html"><img loading="lazy" src="img/zoomcasts/aslami-930px.jpg" srcset="img/zoomcasts/aslami-1275px.jpg 1275w, img/zoomcasts/aslami-930px.jpg 930w, img/zoomcasts/aslami-816px.jpg 816w, img/zoomcasts/aslami-663px.jpg 663w, img/zoomcasts/aslami-532px.jpg 532w, img/zoomcasts/aslami-465px.jpg 465w, img/zoomcasts/aslami-408px.jpg 408w, img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
-					<p>In this episode, Pearl Chaozon Bauer interviews Zarena Aslami, focusing on the importance of collaborating on research projects and in supporting students, colleagues and each other.</p>
+					<p>Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other.</p>
 				</section>
 
 				<section aria-labelledby="literary-1">
 					<h2 id="literary-1">Beyond the Literary #1</h2>
 					<div><a href="rudy.html"><img loading="lazy" src="img/zoomcasts/rudy-930px.jpg" srcset="img/zoomcasts/rudy-1275px.jpg 1275w, img/zoomcasts/rudy-930px.jpg 930w, img/zoomcasts/rudy-816px.jpg 816w, img/zoomcasts/rudy-663px.jpg 663w, img/zoomcasts/rudy-532px.jpg 532w, img/zoomcasts/rudy-465px.jpg 465w, img/zoomcasts/rudy-408px.jpg 408w, img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
-					<p>In this episode, Ryan Fong interviews Jason Rudy to discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
+					<p>Jason Rudy and Ryan Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
 				</section>
 
 				<section aria-labelledby="literary-2">
 					<h2 id="literary-2">Beyond the Literary #2</h2>
 					<div><a href="hayward-reeder-prain-brice.html"><img loading="lazy" src="img/zoomcasts/hayward-reeder-prain-brice-930px.jpg" srcset="img/zoomcasts/hayward-reeder-prain-brice-1275px.jpg 1275w, img/zoomcasts/hayward-reeder-prain-brice-930px.jpg 930w, img/zoomcasts/hayward-reeder-prain-brice-816px.jpg 816w, img/zoomcasts/hayward-reeder-prain-brice-663px.jpg 663w, img/zoomcasts/hayward-reeder-prain-brice-532px.jpg 532w, img/zoomcasts/hayward-reeder-prain-brice-465px.jpg 465w, img/zoomcasts/hayward-reeder-prain-brice-408px.jpg 408w, img/zoomcasts/hayward-reeder-prain-brice-266px.jpg 266w" alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice"/><span>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice</span></a></div>
-					<p>In this episode, Ryan Fong interviews Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice to discuss how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
+					<p>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
 				</section>
 
 			</main>
