--- a/lootens.html
+++ b/lootens.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Zoomcast with Tricia Lootens | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Pearl Chaozon Bauer interviews Tricia Lootens to discuss the latter's academic journey, how students inform changing pedagogies, and the precarity of higher ed." />
+		<meta name="description" content="Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#1C4C87"/>
