--- a/html/zoomcasts/zoomcasts.html
+++ b/html/zoomcasts/zoomcasts.html
@@ -10,19 +10,19 @@
 		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="pragma" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
-		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
-		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
-		<link rel="manifest" href="/site.webmanifest"/>
-		<link rel="preload" as="style" href="/css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
-		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
-		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png"/>
+		<link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png"/>
+		<link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png"/>
+		<link rel="manifest" href="site.webmanifest"/>
+		<link rel="preload" as="style" href="css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/jacksilver-webfont.woff2"/>
+		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
-		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
-		<link rel="preload" as="script" href="/js/carousel-complete.js"/>
-		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
+		<link rel="preload" as="script" href="js/scripts.js?=newVers_0001"/>
+		<link rel="preload" as="script" href="js/carousel-complete.js"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css?=newVers_0001"/>
 		<script>
 			// Hides fallback nav so that it only appears if Javascript disabled
 			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#nav1 li button#fallback-button{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
@@ -52,25 +52,25 @@
 
 				<section aria-labelledby="positionality-1">
 					<h2 id="positionality-1">Positionality #1</h2>
-					<div><a href="/html/zoomcasts/lootens.html"><img loading="lazy" src="/img/zoomcasts/lootens-930px.jpg" srcset="/img/zoomcasts/lootens-1275px.jpg 1275w, /img/zoomcasts/lootens-930px.jpg 930w, /img/zoomcasts/lootens-816px.jpg 816w, /img/zoomcasts/lootens-663px.jpg 663w, /img/zoomcasts/lootens-532px.jpg 532w, /img/zoomcasts/lootens-465px.jpg 465w, /img/zoomcasts/lootens-408px.jpg 408w, /img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
+					<div><a href="lootens.html"><img loading="lazy" src="img/zoomcasts/lootens-930px.jpg" srcset="img/zoomcasts/lootens-1275px.jpg 1275w, img/zoomcasts/lootens-930px.jpg 930w, img/zoomcasts/lootens-816px.jpg 816w, img/zoomcasts/lootens-663px.jpg 663w, img/zoomcasts/lootens-532px.jpg 532w, img/zoomcasts/lootens-465px.jpg 465w, img/zoomcasts/lootens-408px.jpg 408w, img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
 					<p>Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed.</p>
 				</section>
 
 				<section aria-labelledby="positionality-2">
 					<h2 id="positionality-2">Positionality #2</h2>
-					<div><a href="/html/zoomcasts/aslami.html"><img loading="lazy" src="/img/zoomcasts/aslami-930px.jpg" srcset="/img/zoomcasts/aslami-1275px.jpg 1275w, /img/zoomcasts/aslami-930px.jpg 930w, /img/zoomcasts/aslami-816px.jpg 816w, /img/zoomcasts/aslami-663px.jpg 663w, /img/zoomcasts/aslami-532px.jpg 532w, /img/zoomcasts/aslami-465px.jpg 465w, /img/zoomcasts/aslami-408px.jpg 408w, /img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
+					<div><a href="aslami.html"><img loading="lazy" src="img/zoomcasts/aslami-930px.jpg" srcset="img/zoomcasts/aslami-1275px.jpg 1275w, img/zoomcasts/aslami-930px.jpg 930w, img/zoomcasts/aslami-816px.jpg 816w, img/zoomcasts/aslami-663px.jpg 663w, img/zoomcasts/aslami-532px.jpg 532w, img/zoomcasts/aslami-465px.jpg 465w, img/zoomcasts/aslami-408px.jpg 408w, img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
 					<p>Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other.</p>
 				</section>
 
 				<section aria-labelledby="literary-1">
 					<h2 id="literary-1">Beyond the Literary #1</h2>
-					<div><a href="/html/zoomcasts/rudy.html"><img loading="lazy" src="/img/zoomcasts/rudy-930px.jpg" srcset="/img/zoomcasts/rudy-1275px.jpg 1275w, /img/zoomcasts/rudy-930px.jpg 930w, /img/zoomcasts/rudy-816px.jpg 816w, /img/zoomcasts/rudy-663px.jpg 663w, /img/zoomcasts/rudy-532px.jpg 532w, /img/zoomcasts/rudy-465px.jpg 465w, /img/zoomcasts/rudy-408px.jpg 408w, /img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
+					<div><a href="rudy.html"><img loading="lazy" src="img/zoomcasts/rudy-930px.jpg" srcset="img/zoomcasts/rudy-1275px.jpg 1275w, img/zoomcasts/rudy-930px.jpg 930w, img/zoomcasts/rudy-816px.jpg 816w, img/zoomcasts/rudy-663px.jpg 663w, img/zoomcasts/rudy-532px.jpg 532w, img/zoomcasts/rudy-465px.jpg 465w, img/zoomcasts/rudy-408px.jpg 408w, img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
 					<p>Jason Rudy and Ryan Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
 				</section>
 
 				<section aria-labelledby="literary-2">
 					<h2 id="literary-2">Beyond the Literary #2</h2>
-					<div><a href="/html/zoomcasts/hayward-reeder-prain-brice.html"><img loading="lazy" src="/img/zoomcasts/hayward-reeder-prain-brice-930px.jpg" srcset="/img/zoomcasts/hayward-reeder-prain-brice-1275px.jpg 1275w, /img/zoomcasts/hayward-reeder-prain-brice-930px.jpg 930w, /img/zoomcasts/hayward-reeder-prain-brice-816px.jpg 816w, /img/zoomcasts/hayward-reeder-prain-brice-663px.jpg 663w, /img/zoomcasts/hayward-reeder-prain-brice-532px.jpg 532w, /img/zoomcasts/hayward-reeder-prain-brice-465px.jpg 465w, /img/zoomcasts/hayward-reeder-prain-brice-408px.jpg 408w, /img/zoomcasts/hayward-reeder-prain-brice-266px.jpg 266w" alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice"/><span>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice</span></a></div>
+					<div><a href="hayward-reeder-prain-brice.html"><img loading="lazy" src="img/zoomcasts/hayward-reeder-prain-brice-930px.jpg" srcset="img/zoomcasts/hayward-reeder-prain-brice-1275px.jpg 1275w, img/zoomcasts/hayward-reeder-prain-brice-930px.jpg 930w, img/zoomcasts/hayward-reeder-prain-brice-816px.jpg 816w, img/zoomcasts/hayward-reeder-prain-brice-663px.jpg 663w, img/zoomcasts/hayward-reeder-prain-brice-532px.jpg 532w, img/zoomcasts/hayward-reeder-prain-brice-465px.jpg 465w, img/zoomcasts/hayward-reeder-prain-brice-408px.jpg 408w, img/zoomcasts/hayward-reeder-prain-brice-266px.jpg 266w" alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice"/><span>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice</span></a></div>
 					<p>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
 				</section>
 
@@ -84,11 +84,11 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="/js/carousel-complete.js"></script>
+		<script src="js/carousel-complete.js"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
 			// Includes HTML snippets
-			$(function(){var includes=$('[data-include]');jQuery.each(includes,function(){var file='/common/'+$(this).data('include')+'.html?=newVers_0001';$(this).load(file)})});
+			$(function(){var includes=$('[data-include]');jQuery.each(includes,function(){var file='common/'+$(this).data('include')+'.html?=newVers_0001';$(this).load(file)})});
 		</script>
 		<script>
 			// Removes service worker
@@ -103,7 +103,7 @@
 		<script>
 			// Adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
 			// Loads JS file only after rest of page has loaded.
-			$(window).on("load",function(){var element=document.createElement("script");element.src="/js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
+			$(window).on("load",function(){var element=document.createElement("script");element.src="js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
 		</script>		
 	</body>
 </html>
