--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="pragma" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
-		<link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png"/>
-		<link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png"/>
-		<link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png"/>
-		<link rel="manifest" href="site.webmanifest"/>
-		<link rel="preload" as="style" href="css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
-		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/jacksilver-webfont.woff2"/>
-		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
+		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
+		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
+		<link rel="manifest" href="/site.webmanifest"/>
+		<link rel="preload" as="style" href="/css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
+		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
-		<link rel="preload" as="script" href="js/scripts.js?=newVers_0001"/>
-		<link rel="preload" as="script" href="js/carousel-complete.js"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css?=newVers_0001"/>
+		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
+		<link rel="preload" as="script" href="/js/carousel-complete.js"/>
+		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
 		<script>
 			// Hides fallback nav so that it only appears if Javascript disabled
 			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#nav1 li button#fallback-button{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
@@ -126,7 +126,7 @@
 						<div id="myCarousel-items" class="carousel-items" aria-live="off">
 							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0003-deriv-1200px.jpg" srcset="img/home/uvc_0003-deriv-1800px.jpg 1800w, img/home/uvc_0003-deriv-1650px.jpg 1650w, img/home/uvc_0003-deriv-1500px.jpg 1500w, img/home/uvc_0003-deriv-1350px.jpg 1350w, img/home/uvc_0003-deriv-1200px.jpg 1200w, img/home/uvc_0003-deriv-1050px.jpg 1050w, img/home/uvc_0003-deriv-900px.jpg 900w, img/home/uvc_0003-deriv-750px.jpg 750w, img/home/uvc_0003-deriv-600px.jpg 600w, img/home/uvc_0003-deriv-450px.jpg 450w, img/home/uvc_0003-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
+										<img src="/img/home/uvc_0003-deriv-1200px.jpg" srcset="/img/home/uvc_0003-deriv-1800px.jpg 1800w, /img/home/uvc_0003-deriv-1650px.jpg 1650w, /img/home/uvc_0003-deriv-1500px.jpg 1500w, /img/home/uvc_0003-deriv-1350px.jpg 1350w, /img/home/uvc_0003-deriv-1200px.jpg 1200w, /img/home/uvc_0003-deriv-1050px.jpg 1050w, /img/home/uvc_0003-deriv-900px.jpg 900w, /img/home/uvc_0003-deriv-750px.jpg 750w, /img/home/uvc_0003-deriv-600px.jpg 600w, /img/home/uvc_0003-deriv-450px.jpg 450w, /img/home/uvc_0003-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -138,7 +138,7 @@
 							</div>
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0002-deriv-1200px.jpg" srcset="img/home/uvc_0002-deriv-1800px.jpg 1800w, img/home/uvc_0002-deriv-1650px.jpg 1650w, img/home/uvc_0002-deriv-1500px.jpg 1500w, img/home/uvc_0002-deriv-1350px.jpg 1350w, img/home/uvc_0002-deriv-1200px.jpg 1200w, img/home/uvc_0002-deriv-1050px.jpg 1050w, img/home/uvc_0002-deriv-900px.jpg 900w, img/home/uvc_0002-deriv-750px.jpg 750w, img/home/uvc_0002-deriv-600px.jpg 600w, img/home/uvc_0002-deriv-450px.jpg 450w, img/home/uvc_0002-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
+										<img src="/img/home/uvc_0002-deriv-1200px.jpg" srcset="/img/home/uvc_0002-deriv-1800px.jpg 1800w, /img/home/uvc_0002-deriv-1650px.jpg 1650w, /img/home/uvc_0002-deriv-1500px.jpg 1500w, /img/home/uvc_0002-deriv-1350px.jpg 1350w, /img/home/uvc_0002-deriv-1200px.jpg 1200w, /img/home/uvc_0002-deriv-1050px.jpg 1050w, /img/home/uvc_0002-deriv-900px.jpg 900w, /img/home/uvc_0002-deriv-750px.jpg 750w, /img/home/uvc_0002-deriv-600px.jpg 600w, /img/home/uvc_0002-deriv-450px.jpg 450w, /img/home/uvc_0002-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -150,7 +150,7 @@
 							</div>					
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0004-deriv-1200px.jpg" srcset="img/home/uvc_0004-deriv-1200px.jpg 1200w, img/home/uvc_0004-deriv-1050px.jpg 1050w, img/home/uvc_0004-deriv-900px.jpg 900w, img/home/uvc_0004-deriv-750px.jpg 750w, img/home/uvc_0004-deriv-600px.jpg 600w, img/home/uvc_0004-deriv-450px.jpg 450w, img/home/uvc_0004-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+										<img src="/img/home/uvc_0004-deriv-1200px.jpg" srcset="/img/home/uvc_0004-deriv-1200px.jpg 1200w, /img/home/uvc_0004-deriv-1050px.jpg 1050w, /img/home/uvc_0004-deriv-900px.jpg 900w, /img/home/uvc_0004-deriv-750px.jpg 750w, /img/home/uvc_0004-deriv-600px.jpg 600w, /img/home/uvc_0004-deriv-450px.jpg 450w, /img/home/uvc_0004-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -162,7 +162,7 @@
 							</div>	
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0001-deriv-1050px.jpg" srcset="img/home/uvc_0001-deriv-1050px.jpg 1050w, img/home/uvc_0001-deriv-900px.jpg 900w, img/home/uvc_0001-deriv-750px.jpg 750w, img/home/uvc_0001-deriv-600px.jpg 600w, img/home/uvc_0001-deriv-450px.jpg 450w, img/home/uvc_0001-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+										<img src="/img/home/uvc_0001-deriv-1050px.jpg" srcset="/img/home/uvc_0001-deriv-1050px.jpg 1050w, /img/home/uvc_0001-deriv-900px.jpg 900w, /img/home/uvc_0001-deriv-750px.jpg 750w, /img/home/uvc_0001-deriv-600px.jpg 600w, /img/home/uvc_0001-deriv-450px.jpg 450w, /img/home/uvc_0001-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -198,7 +198,7 @@
 				</section>
 				
 				<!-- <div class="image-wrapper">
-					<img class="image-border" loading="lazy" src="img/home/uvc_0005-deriv-1640px.jpg" srcset="img/home/uvc_0005-deriv-1640px.jpg 1640w, img/home/uvc_0005-deriv-1244px.jpg 1244w, img/home/uvc_0005-deriv-864px.jpg 864w, img/home/uvc_0005-deriv-622px.jpg 622w, img/home/uvc_0005-deriv-592px.jpg 592w, img/home/uvc_0005-deriv-432px.jpg 432w, img/home/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+					<img class="image-border" loading="lazy" src="/img/home/uvc_0005-deriv-1640px.jpg" srcset="/img/home/uvc_0005-deriv-1640px.jpg 1640w, /img/home/uvc_0005-deriv-1244px.jpg 1244w, /img/home/uvc_0005-deriv-864px.jpg 864w, /img/home/uvc_0005-deriv-622px.jpg 622w, /img/home/uvc_0005-deriv-592px.jpg 592w, /img/home/uvc_0005-deriv-432px.jpg 432w, /img/home/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
 					<div class="image-caption">
 						<p>
 							<a href="#gee">
@@ -210,7 +210,7 @@
 				
 				<section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
-						<img loading="lazy" src="img/home/uvc_0006-deriv-1170px.jpg" srcset="img/home/uvc_0006-deriv-1170px.jpg 1170w, img/home/uvc_0006-deriv-888px.jpg 888w, img/home/uvc_0006-deriv-585px.jpg 585w, img/home/uvc_0006-deriv-568px.jpg 568w, img/home/uvc_0006-deriv-444px.jpg 444w, img/home/uvc_0006-deriv-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
+						<img loading="lazy" src="/img/home/uvc_0006-deriv-1170px.jpg" srcset="/img/home/uvc_0006-deriv-1170px.jpg 1170w, /img/home/uvc_0006-deriv-888px.jpg 888w, /img/home/uvc_0006-deriv-585px.jpg 585w, /img/home/uvc_0006-deriv-568px.jpg 568w, /img/home/uvc_0006-deriv-444px.jpg 444w, /img/home/uvc_0006-deriv-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
 						<div class="image-caption">
 							<p>
 								<a href="#dance">
@@ -271,11 +271,11 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="js/carousel-complete.js"></script>
+		<script src="/js/carousel-complete.js"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
 			// Includes HTML snippets
-			$(function(){var includes=$('[data-include]');jQuery.each(includes,function(){var file='common/'+$(this).data('include')+'.html?=newVers_0001';$(this).load(file)})});
+			$(function(){var includes=$('[data-include]');jQuery.each(includes,function(){var file='/common/'+$(this).data('include')+'.html?=newVers_0001';$(this).load(file)})});
 		</script>
 		<script>
 			// Removes service worker
@@ -290,7 +290,7 @@
 		<script>
 			// Adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
 			// Loads JS file only after rest of page has loaded.
-			$(window).on("load",function(){var element=document.createElement("script");element.src="js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
+			$(window).on("load",function(){var element=document.createElement("script");element.src="/js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
 		</script>
 	</body>
 </html>
