--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
-		<link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
-		<link rel="preload" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
+		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
+		<link rel="preconnect as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
 		<link rel="preload" as="script" href="/js/carousel-complete.js"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
@@ -46,7 +46,7 @@
 					<div class="carousel-inner">
 						<div class="controls">
 							<button class="rotation pause" aria-label="Stop automatic slide show" title="Rotation Pause">
-								<svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+								<svg width="42" height="34" version="1.1" xmlns="//www.w3.org/2000/svg">
 									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
 									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
 									<polygon class="pause" points="17 8 17 20"></polygon>
@@ -55,14 +55,14 @@
 								</svg>
 							</button>
 							<button class="previous" aria-controls="myCarousel-items" aria-label="Previous Slide" title="Previous Slide">
-								<svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+								<svg width="42" height="34" version="1.1" xmlns="//www.w3.org/2000/svg">
 									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
 									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
 									<polygon points="9 14 21 8 21 11 33 11 33 17 21 17 21 20"></polygon>
 								</svg>
 							</button>
 							<button class="next" aria-controls="myCarousel-items" aria-label="Next Slide" title="Next Slide">
-								<svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+								<svg width="42" height="34" version="1.1" xmlns="//www.w3.org/2000/svg">
 									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
 									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
 									<polygon points="9 11 21 11 21 8 33 14 21 20 21 17 9 17"></polygon>
