--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -15,15 +15,17 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<link rel="preload" as="style" href="/css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="style" href="/css/youtube.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
-		<link rel="preload" as="image" href="https://img.youtube.com/vi/Oq--vvowN6Q/hqdefault.jpg" />
+		<link rel="preload" as="image" href="https://img.youtube.com/vi/Oq--vvowN6Q/maxresdefault.jpg" />
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
-		<!-- <link rel="preload" as="script" href="/js/youtube.js"/> -->
+		<link rel="preload" as="script" href="/js/youtube.js"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
+		<link rel="stylesheet" type="text/css" href="/css/youtube.css?=newVers_0001"/>
 		<script>
 			// Hides fallback nav so that it only appears if Javascript disabled
 			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#nav1 li button#fallback-button{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
@@ -75,7 +77,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="/js/youtube.js?=newVers_0001"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
 			// Includes HTML snippets
@@ -94,7 +95,7 @@
 		<script>
 			// Adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
 			// Loads JS file only after rest of page has loaded.
-			$(window).on("load",function(){var element=document.createElement("script");element.src="/js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
+			$(window).on("load",function(){var element=document.createElement("script");element.src="/js/scripts.js?=newVers_0001";document.body.appendChild(element);var element=document.createElement("script");element.src="/js/youtube.js?=newVers_0001";document.body.appendChild(element)});			
 		</script>		
 	</body>
 </html>
