--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -21,9 +21,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
-		<link rel="preload" as="image" href="https://img.youtube.com/vi/4_bqN5G6wcA/hqdefault.jpg" />
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
-		<link rel="preload" as="script" href="/js/youtube.js"/>
+		<!-- <link rel="preload" as="script" href="/js/youtube.js"/> -->
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
 		<link rel="stylesheet" type="text/css" href="/css/youtube.css?=newVers_0001"/>
 		<script>
@@ -49,7 +48,7 @@
 
 					<div class="wrapper" aria-labelledby="aslami">
 						<!-- Also change YouTube URL in head-->
-						<div id="aslami" class="youtube" tabindex="0" data-embed="4_bqN5G6wcA" data-title="Zarena Aslami" data-alt="Head and shoulders image of Zarena Aslami">
+						<div id="aslami" class="youtube" tabindex="0" data-embed="4_bqN5G6wcA" data-title="Zarena Aslami" data-id="aslami" data-alt="Head and shoulders image of Zarena Aslami">
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
 							</nav>
