--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -43,8 +43,8 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="positionality-01">
-					<h2 id="positionality-01">Zoomcast with Zarena Aslami</h2>
+			<main id="main" aria-labelledby="positionality">
+					<h2 id="positionality">Zoomcast with Zarena Aslami</h2>
 
 					<div class="wrapper" aria-labelledby="aslami">
 						<!-- Also change YouTube URL in head-->
