--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -22,7 +22,6 @@
 		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
-		<!-- <link rel="preload" as="script" href="/js/youtube.js"/> -->
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
 		<link rel="stylesheet" type="text/css" href="/css/youtube.css?=newVers_0001"/>
 		<script>
@@ -47,7 +46,6 @@
 					<h2 id="literary">Zoomcast with Jason Rudy</h2>
 
 					<div class="wrapper" aria-labelledby="rudy">
-						<!-- Also change YouTube URL in head-->
 						<div id="rudy" class="youtube" tabindex="0" data-embed="YCd--HXr4nc" data-title="Jason Rudy" data-id="rudy" data-alt="Head and shoulders image of Jason Rudy">
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
@@ -71,7 +69,7 @@
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 		
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script>
@@ -81,13 +79,7 @@
 		</script>
 		<script>
 			// Removes service worker
-			if ("serviceWorker" in navigator) {
-				navigator.serviceWorker.getRegistrations().then(function (registrations) {
-					for (let registration of registrations) {
-						registration.unregister()
-					}
-				})
-			};
+			if("serviceWorker"in navigator){navigator.serviceWorker.getRegistrations().then(function(registrations){for(let registration of registrations){registration.unregister()}})};
 		</script>
 		<script>
 			// Adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
