--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -15,6 +15,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<link rel="preload" as="style" href="/css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="style" href="/css/cluster.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -23,6 +24,7 @@
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
 		<link rel="preload" as="script" href="/js/carousel-complete.js"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
+		<link rel="stylesheet" type="text/css" href="/css/cluster.css?=newVers_0001"/>
 		<script>
 			// Hides fallback nav so that it only appears if Javascript disabled
 			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#nav1 li button#fallback-button{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
