--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -58,16 +58,16 @@
 					<p>Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed.</p>
 				</section>
 
+				<section aria-labelledby="literary-1">
+					<h2 id="literary-1">Beyond the Literary #1</h2>
+					<div><a href="/html/zoomcasts/rudy.html"><img loading="lazy" src="/img/zoomcasts/rudy-930px.jpg" srcset="/img/zoomcasts/rudy-930px.jpg 930w, /img/zoomcasts/rudy-816px.jpg 816w, /img/zoomcasts/rudy-663px.jpg 663w, /img/zoomcasts/rudy-532px.jpg 532w, /img/zoomcasts/rudy-465px.jpg 465w, /img/zoomcasts/rudy-408px.jpg 408w, /img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
+					<p>Jason Rudy and Ryan Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
+				</section>
+
 				<section aria-labelledby="positionality-2">
 					<h2 id="positionality-2">Positionality #2</h2>
 					<div><a href="/html/zoomcasts/aslami.html"><img loading="lazy" src="/img/zoomcasts/aslami-930px.jpg" srcset="/img/zoomcasts/aslami-1275px.jpg 1275w, /img/zoomcasts/aslami-930px.jpg 930w, /img/zoomcasts/aslami-816px.jpg 816w, /img/zoomcasts/aslami-663px.jpg 663w, /img/zoomcasts/aslami-532px.jpg 532w, /img/zoomcasts/aslami-465px.jpg 465w, /img/zoomcasts/aslami-408px.jpg 408w, /img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
 					<p>Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other.</p>
-				</section>
-
-				<section aria-labelledby="literary-1">
-					<h2 id="literary-1">Beyond the Literary #1</h2>
-					<div><a href="/html/zoomcasts/rudy.html"><img loading="lazy" src="/img/zoomcasts/rudy-930px.jpg" srcset="/img/zoomcasts/rudy-1275px.jpg 1275w, /img/zoomcasts/rudy-930px.jpg 930w, /img/zoomcasts/rudy-816px.jpg 816w, /img/zoomcasts/rudy-663px.jpg 663w, /img/zoomcasts/rudy-532px.jpg 532w, /img/zoomcasts/rudy-465px.jpg 465w, /img/zoomcasts/rudy-408px.jpg 408w, /img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
-					<p>Jason Rudy and Ryan Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
 				</section>
 
 				<section aria-labelledby="literary-2">
