--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -63,7 +63,7 @@
 
 					<p><strong>Positionality Series:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to “undiscipline” Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
 
-					<p><strong>Guest Biography:</strong> </p>
+					<p><strong>Guest Biography:</strong> Zarena Aslami is Associate Professor in the Department of English at Michigan Start University. She is the author of <em>The Dream Life of Citizens: Late Victorian Novels and the Fantasy of the State</em> and is currently working on a book project that examines nineteenth-century British representations of Afghanistan. </p>
 			</main>
 			
 			<div data-include="footer"></div>
