--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -58,10 +58,16 @@
 
 					<p id="text"><strong>Speakers:</strong> Jennifer Hayward (guest), Jessie Reeder (guest), and Michelle Prain Brice (guest), Ryan Fong (host)</p>
 					<p><strong>Date:</strong> February 25, 2021</p>
-					<p><strong>Length:</strong> 35:39</p>	
+					<p><strong>Length:</strong> 35:39</p>
+					<p><strong>Cite (MLA):</strong> “Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html">https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html</a>.</p>
+
+					<hr/>
+
 					<p><strong>Zoomcast Overview:</strong> Ryan Fong speaks with Jennifer Hayward, Jessie Reeder and Michelle Prain Brice, the three creators of <a href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Hayward, Reeder, and Brice also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
 
 					<p><strong>Beyond the Literary Series:</strong> This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
+
+					<hr/>
 
 					<p><strong>Guest Biographies:</strong> Jennifer Hayward, Professor of English and Global Media and Digital Studies at the College of Wooster, received her Ph.D. from Princeton University. Her books include <em>Consuming Pleasures: Active Audiences and Serial Fictions </em>as well as new editions of Maria Graham’s <em>Journal of a Residence in Chile</em> and <em>Journal of a Voyage to Brazil</em>; recent research focuses on nineteenth-century British travellers in the Americas, with emphasis on the transoceanic networks connecting Britain with Latin America. A Fulbright in Chile in 2016-17 was instrumental in launching her current collaboration with Jessie Reeder and Michelle Prain Brice, which has developed into a transoceanic exchange of the best kind.</p>
           
