--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -58,10 +58,16 @@
 
 					<p id="text"><strong>Speakers:</strong> Tricia Lootens (guest), Pearl Chaozon Bauer (host)</p>
 					<p><strong>Date:</strong> January 29, 2021</p>
-					<p><strong>Length:</strong> 31:31</p>	
+					<p><strong>Length:</strong> 31:31</p>
+					<p><strong>Cite (MLA):</strong> “Zoomcast with Tricia Lootens.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/lootens.html">https://undiscipliningvc.org/html/zoomcasts/lootens.html</a>.</p>
+
+					<hr/>
+
 					<p><strong>Zoomcast Overview:</strong> Chaozon Bauer interviews Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia. In 2005, Lootens’ questionings of longstanding practices of “writing Victorian Studies white,” which would eventually shape her Transatlantic <em>Political Poetess</em> (2017), began extending to engagements with the writing and reception of Indian poet, translator, critic, and novelist Toru Dutt. A member of the national Historical Poetics Working Group, Lootens was co-organizer, with Brigitte Fielder, Ryan Fong, and Jason Rudy, of the Summer 2020 virtual Dickens Universe Conference, which gathered African-Americanists and nineteenth-century British literature specialists to reflect on the critical pairing of Charles Dickens’s <em>David Copperfield</em> with Frances E. W. Harper’s <em>Iola Leroy</em>, a process planned to continue, if possible, in-person, in Summer 2022. In this zoomcast interview, we address Tricia's academic journey, how our students inform our changing pedagogies, and raise a few thoughts about trying to negotiate relations to the precarity of higher education, particularly as it affects our most structurally-vulnerable colleagues.</p>
 
 					<p><strong>Positionality Series:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to “undiscipline” Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
+
+					<hr/>
 
 					<p><strong>Guest Biography:</strong> Dr. Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia, is a former collective member of <em>off our backs: a women’s newsjournal.</em> The author of <em>Political Poetess: Victorian Femininity, Race, and the Legacy of Separate Spheres (Princeton, </em>2017) as well as of <em>Lost Saints</em> (University Press of Virginia, 1996), Lootens first started publishing and teaching on connections between Victorian poetry and the Black Atlantic in the 1990s. More recently, her “Looking Beyond [and Before] <em>Ancient Ballads</em>: Toru Dutt’s <em>Sheaf </em>and the Force of Abolition Time” in <em>Victorian Studies</em>, 2019 speaks to one aspect of linking Victorian, Transatlantic, and transimperial poetic studies; her 2011 Longman Cultural Edition of Rudyard Kipling's <em>Kim, </em>co-edited with Paula M. Krebs represents another.</p>
 			</main>
