--- a/common/nav.html
+++ b/common/nav.html
@@ -11,11 +11,11 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/zoomcasts.html"><i class="fa fa-play-circle fa-fw" aria-hidden="true"></i> <span id="zoomcasts">Zoomcasts</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="/lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span id="lesson_plans">Lesson Plans</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span id="lesson_plans">Lesson Plans</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span id="syllabi">Syllabi</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span id="syllabi">Syllabi</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span id="about">About</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span id="about">About</span></a></li>
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <span>Email</span></a></li>
 
@@ -32,11 +32,11 @@
 		
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/zoomcasts.html"><i class="fa fa-play-circle fa-fw" aria-hidden="true"></i> <span>Zoomcasts</span></a></li>
 		
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="/lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span>Lesson Plans</span></a></li>
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span>Lesson Plans</span></a></li>
 		
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span>Syllabi</span></a></li>
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span>Syllabi</span></a></li>
 		
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span>About</span></a></li>
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span>About</span></a></li>
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <span>Email</span></a></li>
 
