update index for citation

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 			</header>
 
 			<main id="main">
+
 				<section class="organizers" aria-labelledby="organizers">
 					<h2 id="organizers">Organizers</h2>
 					<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
@@ -191,6 +192,13 @@
 				<section aria-labelledby="site-code" class="small">
 					<h3 id="site-code">Site Code</h3>
 					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences.</p>
+				</section>
+
+				<hr />
+
+				<section aria-labelledby="citation">
+					<h3 id="citation">Page Citation (MLA)</h3>
+					<p><strong>(MLA):</strong> Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, organizers. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org">https://undiscipliningvc.org</a>.</p>
 				</section>
 
 			</main>
