--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#3D5A80"/>
+		<meta name="theme-color" content="#3C587C"/>
 		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="pragma" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
