update all files for blue

--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Introduces and organizes in clusters a series of lesson plans focused on teaching Victorian Studies through a positive, race-conscious lens." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#395376"/>
+		<meta name="theme-color" content="#324967"/>
 		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="pragma" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
@@ -49,7 +49,7 @@
 
 				<section aria-labelledby="introduction">
 					<h2 id="introduction">Introduction</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eleifend auctor diam, non pharetra velit aliquet nec. Aliquam venenatis mauris ut ipsum euismod, in tincidunt mauris mattis. Aliquam ultrices in felis non imperdiet. In rutrum nisl eget eros tempor convallis. Vestibulum sodales elit ac finibus rhoncus. Praesent et leo ornare, gravida urna ut, molestie arcu. Nam ornare sem ut aliquet ultricies. Nunc pretium bibendum nisl vel laoreet.</p>
+					<p>These lesson plans are organized around specific themes (i.e., “pathways”) and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
 				<section aria-labelledby="africa">
