--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -56,7 +56,7 @@
 					<h2 id="africa">Africa, Diaspora, and the British Empire</h2>
 					<!-- <div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
 					<ul>
-						<li><a href="">Introduction</a></li>
+						<li><a href="">Cluster Introduction</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Historical Literature in the Aftermath of Slavery</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
@@ -70,7 +70,7 @@
 					<h2 id="seacole">Mary Seacole and the Caribbean</h2>
 					<!-- <div><a href="/html/lesson_plans/seacole.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
 					<ul>
-						<li><a href="">Introduction</a></li>
+						<li><a href="">Cluster Introduction</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Autobiographical Writing</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Recentering Nursing in Wartime</a></li>
