--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -52,13 +52,19 @@
 					<p>These lesson plans are organized around specific themes (i.e., “pathways”) and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
-				<section aria-labelledby="africa">
-					<h2 id="africa">Africa, Diaspora, and the British Empire</h2>
+				<section aria-labelledby="africa-1">
+					<h2 id="africa-1">Africa, Diaspora, and the British Empire #1</h2>
+					<div><a href=""><img loading="lazy" src="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div>
+				</section>
+
+				<section aria-labelledby="africa-2">
+					<h2 id="africa-2">Africa, Diaspora, and the British Empire #2</h2>
 					<!-- <div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
 					<ul>
 						<!-- <li><a href="">Cluster Introduction</a></li> -->
-						<li><div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Historical Literature in the Aftermath of Slavery</a></li>
+						<!-- <li><div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div></li> -->
+						<li>Lesson Plans</li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> The Aftermath of Slavery</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Sexuality, Desire, and Family</a></li>
@@ -67,12 +73,18 @@
 					</ul>
 				</section>
 
-				<section aria-labelledby="africa">
-					<h2 id="seacole">Mary Seacole and the Caribbean</h2>
+				<section aria-labelledby="seacole-1">
+					<h2 id="seacole-1">Mary Seacole and the Caribbean #1</h2>
+					<div><a href=""><img loading="lazy" src="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div>
+				</section>
+
+				<section aria-labelledby="seacole-2">
+					<h2 id="seacole-2">Mary Seacole and the Caribbean #2</h2>
 					<!-- <div><a href="/html/lesson_plans/seacole.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
 					<ul>
 						<!-- <li><a href="">Cluster Introduction</a></li> -->
-						<li><div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div></li>
+						<!-- <li><div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div></li> -->
+						<li>Lesson Plans</li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Autobiographical Writing</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Recentering Nursing in Wartime</a></li>
